# Cpp_17_Koans

./: .gitignore  510_2_main.cpp  510_main.cpp  CMakeLists.txt  README.md  c1_day0_main.cpp  edu50_a.cpp  edu50_e.cpp  main.cpp  r1030_F.cpp  r197_d_main.cpp  r216_e_main.cpp  r223_c_main.cpp  r271_F.cpp  r292_e.cpp  r44edu_D.cpp  r496_E.cpp  r508_e.cpp  r510_D.cpp  r510_main.cpp  r511_a.cpp  segment_tree_main.cpp  techno2019_f.cpp
src/: CMakeLists.txt  sample1.cc  uchim_iteratory.cpp  uchim_mnozhestva.cpp  uchim_sortirovku.cpp  uchim_string.cpp  uchim_string.h
tests/: CMakeLists.txt
tests/unit_tests/: CMakeLists.txt  test_bitset.cpp  test_codeforce_defines.cpp  test_data_types.cpp  test_lower_bound.cpp  test_maximum_subarray.cpp  test_pointers.cpp  test_sample1.cc  test_string_stream.cpp  test_strings.cpp  test_urok0.cpp  test_urok1.cpp  test_valarray.cpp
